--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     <script src="js/scripts.js" defer></script>
 </head>
 <body>
-    <h1>TEsTE</h1>
+    <div class="container">
+        <header id="qr-header">
+            <h1>QR Code generator</h1>
+            <p>Enter a URL or text to create the QR Code</p>
+        </header>
+        <div id="qr-form">
+            <input type="text" placeholder="Enter a URL or text...">
+            <button>Generate QR Code</button>
+        </div>
+        <div id="qr-code">
+            <img src ="img/qrcode.png" alt ="QR Code">
+        </div>
+    </div>
 </body>
 </html>
