--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="js/scripts.js" defer></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container active">
         <header id="qr-header">
             <h1>QR Code generator</h1>
             <p>Enter a URL or text to create the QR Code</p>
