--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <script src="js/scripts.js" defer></script>
 </head>
 <body>
-    <div class="container active">
+    <div class="container">
         <header id="qr-header">
             <h1>QR Code generator</h1>
             <p>Enter a URL or text to create the QR Code</p>
         </header>
         <div id="qr-form">
-            <input type="text" placeholder="Enter a URL or text...">
+            <input type="text" placeholder="Enter a URL or text..." id="to-qr">
             <button>Generate QR Code</button>
         </div>
         <div id="qr-code">
